fixes smoketest blocker, bug 210579 "hang trying to access page with invalid headers" r=dougt sr=bzbarsky